--- a/packages/default/scss/gantt/_theme.scss
+++ b/packages/default/scss/gantt/_theme.scss
@@ -228,6 +228,10 @@
                 $border: $base-border
             );
         }
+
+        .k-task-actions {
+            color: $gantt-action-on-offset-text;
+        }
     }
 
     .k-task-offset:hover {
